# ddns-update

./: Cargo.toml
.github/workflows/: rust_ci.yml
src/: cloudflare.rs  logging.rs  main.rs
