[package]
name = "ddns-update"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tryhard = "0.5"

hostname = "0.4"
netlink-sys = "0.8"
rtnetlink = "0.16"

[build-dependencies]
built = { version = "0.8", features = ["git2", "semver"] }
